# tau

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  clargs.go  go.mod  main.go  tau.tau
example/: tau.json
lib/: lib_test.go  packing.go  parser.go  tauconf.go
src/: compression.cpp  compression.h  main.cpp  packing.cpp  packing.h
tau/: tau.json
tau/files/zEhVoxtmPpB3-Lum3sqYZgfpnWjlo-QlfXcKCJGTP6A=/: packing.go  parser.go
test/: lorem.tar.xz  lorem.txt  package.tau
